Allow sidebar to scroll independently; fixes #1

--- a/source/_static/css/style.css
+++ b/source/_static/css/style.css
@@ -72,6 +72,13 @@
 	position: static;
 }
 
+.wy-side-scroll {
+    position: relative;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    height: 100%;
+}
+
 .wy-nav-top i {
 	font-size: 17.3333px;
 	margin-top: 15px;
