--- a/source/_static/css/style.css
+++ b/source/_static/css/style.css
@@ -1,5 +1,13 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
+/* banner
+ * ------
+ */
+
+.banner {
+    margin-bottom: 0;
+}
+
 /* navbar
  * ------
  */
