--- a/source/_static/css/style.css
+++ b/source/_static/css/style.css
@@ -2,6 +2,15 @@
  * ------
  */
 
+.navbar {
+    min-height: 60px;
+}
+
+.navbar-brand {
+    height: 60px;
+    line-height: 30px;
+}
+
 .navbar-default, .navbar-inverse {
 	margin-left: 300px;
 	border-radius: 0;
@@ -56,7 +65,27 @@
 	}
 }
 
+/* navbar search
+ * -------------
+ */
 
+.navbar-form {
+    margin-top: 7px;
+    margin-bottom: 7px;
+}
+
+#rtd-search-form input {
+    height: 46px;
+    padding: 0 10px 0 10px;
+    border-radius: 4px;
+    line-height: normal;
+}
+
+@media (min-width: 769px) {
+    #rtd-search-form input {
+        width: 300px;
+    }
+}
 
 /* sidebar
  * ------
