--- a/source/themes/sphinx_theme/static/css/style.css
+++ b/source/themes/sphinx_theme/static/css/style.css
@@ -182,6 +182,10 @@ footer {
    color: #060f17;
 }
 
+.admonition *:not(.first) .pre {
+   color: #aaffe3;
+}
+
 .rst-content .toc-backref {
    color: inherit;
 }
