--- a/source/_static/css/style.css
+++ b/source/_static/css/style.css
@@ -93,13 +93,13 @@ body, html, .wy-nav-content {
 
 .wy-menu-vertical a {
     font-size: inherit;
-    color: #dff0ff;
+    color: #dff0ff !important;
 }
 
 .wy-menu-vertical a:hover,
 .wy-menu-vertical a:focus {
     background-color: inherit;
-    color: #ffc000;
+    color: #ffc000 !important;
 }
 
 .wy-side-nav-search > a {
