--- a/source/themes/sphinx_rtd_theme/static/css/theme.css
+++ b/source/themes/sphinx_rtd_theme/static/css/theme.css
@@ -1,3 +1,9 @@
+/*
+ * SPDX-FileCopyrightText: 2013-2018 Dave Snider, Read the Docs, Inc. & contributors
+ *
+ * SPDX-License-Identifier: MIT
+ */
+
 html {
   box-sizing: border-box
 }
