--- a/source/_static/css/style.css
+++ b/source/_static/css/style.css
@@ -1,3 +1,9 @@
+/*
+ * SPDX-FileCopyrightText: 2019-2022 Louis Abel, Tommy Nguyen
+ *
+ * SPDX-License-Identifier: MIT
+ */
+
 /* general
  * -------
  */
